Fixes in unwanted overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Reem Kufi", sans-serif;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .main {
