--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,9 @@
   text-align: center;
 
   background-color: black;
+
+  opacity: 1;
+  transition: opacity 0.5s;
 }
 
 .item {
@@ -32,6 +35,7 @@
   top: 2em;
   z-index: 2;
   padding: 1em;
+  cursor: pointer;
 }
 
 .hover {
