--- a/src/pages/Body/Body.scss
+++ b/src/pages/Body/Body.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
 
-  height: 100%;
   align-self: center;
   justify-items: center;
 }
